# anty-android-manager

./: .eslintrc.cjs  .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  frontend-plan.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  docker_client.py  main.py  redroid.py  runtime.py  schemas.py  security.py  simulated.py
backend/app/routers/: health.py  phones.py
electron/: ipc-handlers.ts  launcher.ts  main.ts  preload.ts  settings-store.ts  sidecar.ts  types.ts  wsl-keepalive.ts
shared/: ipc-schemas.ts
src/: global.d.ts  main.tsx
src/api/: query-client.ts  sidecar.ts
src/components/: BackendStateDot.tsx  RouteProgressBar.tsx  Skeleton.tsx  ThemeToggle.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  DropdownMenu.tsx  Kbd.tsx  (+4 more)
src/data/: phoneTemplates.ts
src/error/: AppErrorBoundary.tsx  ErrorFallback.tsx  RouteErrorBoundary.tsx
src/hooks/: useBackendState.ts  useReducedMotionSafe.ts  useShortcut.ts
src/ipc/: index.ts
src/layout/: PageHeader.tsx  Shell.tsx  Sidebar.tsx  SidebarNavItem.tsx  StatusBar.tsx  TitleBar.tsx  TopBar.tsx
src/lib/: format.ts  identity.ts  ids.ts  proxy.ts
src/pages/: About.tsx  ApkLibrary.tsx  Automation.tsx  Dashboard.tsx  Fingerprints.tsx  Logs.tsx  Network.tsx  NotFound.tsx  Settings.tsx  Snapshots.tsx
src/router/: index.tsx  preload.ts
src/store/: phones.ts  settings.ts  ui.ts
src/styles/: global.css
src/theme/: ThemeProvider.tsx
(+3 files in other folders)
