[project]
name = "cloudphone-sidecar"
version = "0.1.0"
description = "Python sidecar that drives redroid containers for the CloudPhone Manager Electron app."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "docker>=7.1",
    "adb-shell>=0.4.4",
    "structlog>=24.4",
    "httpx>=0.27",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
